--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,5 +21,6 @@ jobs:
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+          PGP_KEY_ID: ${{ secrets.PGP_KEY_ID }}
           PGP_KEY: ${{ secrets.PGP_KEY }}
           PGP_PASSWORD: ${ secrets.PGP_PASSWORD }}
