mvn: some changes to be able to push to maven central   - add pom.xml   - change package name   - add publish.sh to push (locally) on maven central

--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
     id 'signing'
 }
 
-group = 'com.faveod'
-archivesBaseName = 'faveod-strscan'
+group = 'fr.blackteam'
+archivesBaseName = 'strscan'
 version = "1.0.0"
 description = "A clone of Ruby's StringScanner from `strscan`"
 
